k3s/argo/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-workflows-nodeport
  namespace: argo
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: argo-workflows
    app.kubernetes.io/name: argo-workflows-server
  ports:
  - port: 2746
    targetPort: 2746
    nodePort: 30800
